--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.9.1",
     "react": "^18.2.0",
+    "react-custom-scroll": "^4.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
